[package]
name = "rtt-daemon"
description = "A daemon to retrieve RTT logs."
version = "0.1.0"
readme = "README.md"
edition = "2021"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
repository = "https://github.com/newam/rtt-daemon"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "color"] }
ctrlc = "3"
log = "0.4"
object = "0.28"
probe-rs = "0.12"
probe-rs-rtt = "0.12"
systemd-journal-logger = "0.4"
