[package]
name = "rtt-daemon"
description = "A daemon to retrieve RTT logs."
version = "0.1.0"
readme = "README.md"
edition = "2021"
authors = ["Alex Martens <alex@thinglab.org>"]
categories = ["embedded", "hardware-support", "development-tools::debugging"]
keywords = ["embedded"]
repository = "https://github.com/newam/rtt-daemon"

[dependencies]
anyhow = "1"
ctrlc = "3"
log = "0.4"
object = "0.32"
probe-rs = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
systemd-journal-logger = "2"
